# fastapi-books

./: .env.example  LICENSE  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: ed51f42c2429_initial_migration.py
src/: config.py  main.py
src/auth/: models.py  routes.py  service.py  utils.py
src/database/: connection.py
